[tool.poetry]
name = "secrets.env"
version = "1.0.4"
description = "Connect the credential store to your app"
authors = ["tzing <tzingshih@gmail.com>"]
license = "Apache-2.0"
readme = "Readme.pypi.rst"
repository = "https://github.com/tzing/secrets.env"
documentation = "https://secrets-env.readthedocs.io/"
keywords = ["vault", "environment variables"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
cryptography = { version = ">=42.0.5,<44.0.0", optional = true }
eval-type-backport = { version = "^0.1.3", python = "<3.10" }
httpx = { version = ">=0.23.1,<0.28.0" }
keyring = { version = ">=23.3.0,<25.0.0", optional = true }
pexpect = { version = "^4.9.0", optional = true }
pydantic = "^2.0.3"
PyYAML = { version = ">=5.1.2,<7.0.0", optional = true }
shellingham = { version = "^1.5.4", optional = true }
tomli = { version = ">=1.1.0,<3.0.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
poetry = "^1.2.2"
pyright = "*"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
PyYAML = "*"
respx = "^0.21.1"
ruff = "^0.6.1"

# Workaround: Sphinx requires Python 3.10, but we still want to support 3.9
furo = { version = ">=2023.5.20", python = "^3.10" }
sphinx = { version = "^8.0.2", python = "^3.10" }
sphinx-click = { version = "^6.0.0", python = "^3.10" }
sphinx-design = { version = "^0.6.0", python = "^3.10" }

[tool.poetry.extras]
all = ["cryptography", "keyring", "pexpect", "PyYAML", "shellingham"]
keyring = ["keyring"]
teleport = ["cryptography", "pexpect"]
yaml = ["PyYAML"]

[tool.poetry.scripts]
"secrets.env" = "secrets_env.console:entrypoint"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-secrets-env-plugin = "secrets_env.realms.poetry:SecretsEnvPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=secrets_env --cov-report xml"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if typing.TYPE_CHECKING"]

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "PGH", # pygrep
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RUF", # ruff checks
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]

[tool.ruff.lint.extend-per-file-ignores]
"secrets_env/console/__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.pyright]
include = ["secrets_env"]

[tool.bumpver]
current_version = "1.0.4"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"secrets_env/version.py" = ['__version__ = "{version}"']
